Updated portfolio: 6 works

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a href="./index.html" class="navbar-brand">Mashup Template</a>
+    <a href="./index.html" class="navbar-brand">Eri Ishikawa | Graphic and UI/UX Design</a>
   </div>
 
   <nav class="sidebar">
@@ -46,8 +46,8 @@
         <p>Designer with a focus in graphic and UI/UX design, working to better understand how design influences the actions we take.</p>
       </div>
       <ul class="nav">
-        <li><a href="./about.html" title="">About</a></li>
-        <li><a href="./contact.html" title="">Contact</a></li>
+        <li><a href="./about.html" title="">ABOUT</a></li>
+        <li><a href="./contact.html" title="">CONTACT</a></li>
 
       </ul>
 
@@ -63,7 +63,7 @@
             <i class="fa fa-twitter"></i>
           </a>
         </p> -->
-        <p>© Eri Ishikawa | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a></p>
+        <p>© Eri Ishikawa | Website created with <a href="http://www.mashup-template.com/">Mashup Template</a></p>
       </nav>
     </div>
   </nav>
@@ -78,12 +78,44 @@
     <div class="grid-sizer"></div>
 
     <div class="grid-item">
-      <img class="img-responsive" alt="" src="./assets/images/img-12.jpg">
-      <a href="./project.html" class="project-description">
+      <img class="img-responsive" alt="" src="./assets/prj_jimottirebrand/jimottirebrand-mockup.jpg">
+      <a href="./prj_jimottirebrand.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
+            <h3>Jimotti Rebrand</h3>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="grid-item">
+      <img class="img-responsive" alt="" src="./assets/prj_aprilbrochure/aprilbrochure-mockup2.jpg">
+      <a href="./prj_aprilbrochure.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>April Greiman Brochure</h3>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="grid-item">
+      <img class="img-responsive" alt="" src="./assets/prj_amosbooklet/amosbooklet-mockup1.jpg">
+      <a href="./prj_amosbooklet.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>Amos Kennedy Booklet</h3>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="grid-item">
+      <img class="img-responsive" alt="" src="./assets/prj_communebrand/communebrand-mockup.jpg">
+      <a href="./prj_communebrand.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>Commune. Brand Identity</h3>
           </div>
         </div>
       </a>
@@ -91,87 +123,26 @@
 
 
     <div class="grid-item">
-      <img class="img-responsive" alt="" src="./assets/images/img-05.jpg">
-      <a href="./project.html" class="project-description">
+      <img class="img-responsive" alt="" src="./assets/prj_nomorebook/nomorebook-mockup.jpg">
+      <a href="./prj_nomorebook.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
+            <h3>Lyrical Book Cover</h3>
           </div>
         </div>
       </a>
     </div>
 
     <div class="grid-item">
-      <img class="img-responsive" alt="" src="./assets/images/img-13.jpg">
-      <a href="./project.html" class="project-description">
+      <img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-mockup.jpg">
+      <a href="./prj_pantherposter.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
+            <h3>Florida Panther Poster Series</h3>
           </div>
         </div>
       </a>
     </div>
-    <div class="grid-item">
-      <img class="img-responsive" alt="" src="./assets/images/img-04.jpg">
-      <a href="./project.html" class="project-description">
-        <div class="project-text-holder">
-          <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="grid-item">
-      <img class="img-responsive" alt="" src="./assets/images/img-07.jpg">
-      <a href="./project.html" class="project-description">
-        <div class="project-text-holder">
-          <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="grid-item">
-      <img class="img-responsive" alt="" src="./assets/images/img-11.jpg">
-      <a href="./project.html" class="project-description">
-        <div class="project-text-holder">
-          <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="grid-item">
-      <img class="img-responsive" alt="" src="./assets/images/img-10.jpg">
-      <a href="./project.html" class="project-description">
-        <div class="project-text-holder">
-          <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="grid-item">
-      <img class="img-responsive" alt="" src="./assets/images/img-03.jpg">
-      <a href="./project.html" class="project-description">
-        <div class="project-text-holder">
-          <div class="project-text-inner">
-            <h3>Vivamus vestibulum</h3>
-            <p>Discover more</p>
-          </div>
-        </div>
-      </a>
-    </div>
-
   </div>
 </div>
 
