--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a href="./index.html" class="navbar-brand">Mashup Template</a>
+    <a href="./index.html" class="navbar-brand">Eri Ishikawa | Graphic and UI/UX Design</a>
   </div>
 
   <nav class="sidebar">
@@ -43,15 +43,12 @@
             <br>
             Eri Ishikawa
           </a>
-        <p>Designer with a focus in graphic and UI/UX design, working to better understand how design influences the actions we take.
-        <br>
-        <br>
-        Email: <a href="mailto:kudamonoairi@gmail.com">kudamonoairi@gmail.com</a></p>
+        <p>Designer with a focus in graphic and UI/UX design, working to better understand how design influences the actions we take.</p>
       </div>
       <ul class="nav">
-        <li><a href="./index.html" title="">Home</a></li>
-        <li><a href="./about.html" title="">About</a></li>
-        <li><a href="./contact.html" title="">Contact</a></li>
+        <li><a href="./index.html" title="">HOME</a></li>
+        <li><a href="./about.html" title="">ABOUT</a></li>
+        <li><a href="./contact.html" title="">CONTACT ✿</a></li>
 
       </ul>
 
@@ -67,7 +64,7 @@
             <i class="fa fa-twitter"></i>
           </a>
         </p> -->
-        <p>© Eri Ishikawa | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a></p>
+        <p>© Eri Ishikawa | Website created with <a href="http://www.mashup-template.com/">Mashup Template</a></p>
       </nav>
     </div>
   </nav>
@@ -79,10 +76,6 @@
   <div class="col-xs-12">
     <div class="section-container-spacer">
       <h1>Contact</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. <br>Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.</p>
     </div>
     <div class="section-container-spacer">
        <form action="" class="reveal-content">
@@ -99,20 +92,30 @@
               </div>
               <button type="submit" class="btn btn-primary btn-lg">Send</button>
             </div>
+
             <div class="col-md-6">
               <ul class="list-unstyled address-container">
+                <!--
                 <li>
                   <span class="fa-icon">
                     <i class="fa fa-phone" aria-hidden="true"></i>
                   </span>
                   + 33 9 07 45 12 65
                 </li>
+              -->
                 <li>
                   <span class="fa-icon">
                     <i class="fa fa-at" aria-hidden="true"></i>
                   </span>
-                  e-mail@mail.io
+                  <a href="mailto:kudamonoairi@gmail.com">kudamonoairi@gmail.com</a>
                 </li>
+                <li>
+                  <span class="fa-icon">
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                  </span>
+                  <a href="https://www.linkedin.com/in/eri-ishikawa/">LinkedIn Profile</a>
+                </li>
+                <!--
                 <li>
                   <span class="fa-icon">
                     <i class="fa fa fa-map-marker" aria-hidden="true"></i>
@@ -130,6 +133,7 @@
               <a href="https://dribbble.com/" title="" class="fa-icon">
                 <i class="fa fa-dribbble"></i>
               </a>
+            -->
             </div>
           </div>
         </form>
