--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <title>Eri Ishikawa | Graphic and UI/UX Design</title>
 
-<link href="./main.82cfd66e.css" rel="stylesheet"></head>
+<link href="./main.82cfd66e_index.css" rel="stylesheet"></head>
 
 <body>
 
@@ -39,16 +39,14 @@
     <div class="navbar-collapse" id="navbar-collapse">
       <div class="site-header hidden-xs">
           <a class="site-brand" href="./index.html" title="">
-            <img class="img-responsive site-logo" alt="" src="./assets/images/profilepic.png">
-            <br>
-            Eri Ishikawa
+            <img class="img-responsive site-logo" alt="" src="./assets/images/profilepic.svg">
           </a>
-        <p>Designer with a focus in graphic and UI/UX design, working to better understand how design influences the actions we take.</p>
+          <br>
+        <p style="font-size:18px">Hi! I'm Eri Ishikawa, a designer with a focus in graphic and UI/UX design, working to better understand how design influences the actions we take.</p>
       </div>
       <ul class="nav">
-        <li><a href="./about.html" title="">ABOUT</a></li>
-        <li><a href="./contact.html" title="">CONTACT</a></li>
-
+        <li><a href="./about.html" title=""><b>About</b></a></li>
+        <li><a href="./contact.html" title=""><b>Contact</b></a></li>
       </ul>
 
       <nav class="nav-footer">
@@ -63,7 +61,7 @@
             <i class="fa fa-twitter"></i>
           </a>
         </p> -->
-        <p>© Eri Ishikawa | Website created with <a href="http://www.mashup-template.com/">Mashup Template</a></p>
+        <p style="font-size:15px">© Eri Ishikawa 2021<br>Website created using <br><a href="http://www.mashup-template.com/">Mashup Template</a></p>
       </nav>
     </div>
   </nav>
@@ -78,18 +76,29 @@
     <div class="grid-sizer"></div>
 
     <div class="grid-item">
-      <img class="img-responsive" alt="" src="./assets/prj_jimottirebrand/jimottirebrand-mockup.jpg">
-      <a href="./prj_jimottirebrand.html" class="project-description">
+      <img class="img-responsive" alt="" src="./assets/prj_nhfkbook/nhfkbook-mockup1.jpg">
+      <a href="./prj_nhfkbook.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
-            <h3>Jimotti Rebrand</h3>
+            <h3>New Hope for Kids Annual Report 2020</h3>
           </div>
         </div>
       </a>
     </div>
 
     <div class="grid-item">
-      <img class="img-responsive" alt="" src="./assets/prj_aprilbrochure/aprilbrochure-mockup2.jpg">
+      <img class="img-responsive" alt="" src="./assets/prj_jimottirebrand/jimottirebrand-mockup.jpg">
+      <a href="./prj_jimottirebrand.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>Jimotti's Restaurant Rebrand</h3>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="grid-item">
+      <img class="img-responsive" alt="" src="./assets/prj_aprilbrochure/aprilbrochure-mockup3.jpg">
       <a href="./prj_aprilbrochure.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
