--- a/prj_pantherposter.html
+++ b/prj_pantherposter.html
@@ -19,10 +19,12 @@
 
   <title>Eri Ishikawa | Graphic and UI/UX Design</title>
 
-<link href="./main.82cfd66e.css" rel="stylesheet"></head>
+<link rel="stylesheet" href="./bootstrap.min.css">
+<link rel="stylesheet" href="./ekko-lightbox.css">
+<link href="./main.82cfd66e.css" rel="stylesheet">
+</head>
 
 <body>
-
 <!-- Add your content of header -->
 <header class="">
   <div class="navbar navbar-default visible-xs">
@@ -39,17 +41,15 @@
     <div class="navbar-collapse" id="navbar-collapse">
       <div class="site-header hidden-xs">
           <a class="site-brand" href="./index.html" title="">
-            <img class="img-responsive site-logo" alt="" src="./assets/images/profilepic.png">
-            <br>
-            Eri Ishikawa
+            <img class="img-responsive site-logo" alt="" src="./assets/images/profilepic.svg">
           </a>
-        <p>Designer with a focus in graphic and UI/UX design, working to better understand how design influences the actions we take.</p>
+          <br>
+        <p style="font-size:18px">Hi! I'm Eri Ishikawa, a designer with a focus in graphic and UI/UX design, working to better understand how design influences the actions we take.</p>
       </div>
       <ul class="nav">
-        <li><a href="./index.html" title="">HOME</a></li>
-        <li><a href="./about.html" title="">ABOUT</a></li>
-        <li><a href="./contact.html" title="">CONTACT</a></li>
-
+        <li><a href="./index.html" title=""><b>Home</b></a></li>
+        <li><a href="./about.html" title=""><b>About</b></a></li>
+        <li><a href="./contact.html" title=""><b>Contact</b></a></li>
       </ul>
 
       <nav class="nav-footer">
@@ -64,7 +64,7 @@
             <i class="fa fa-twitter"></i>
           </a>
         </p> -->
-        <p>© Eri Ishikawa | Website created with <a href="http://www.mashup-template.com/">Mashup Template</a></p>
+        <p style="font-size:15px">© Eri Ishikawa 2021<br>Website created using <br><a href="http://www.mashup-template.com/">Mashup Template</a></p>
       </nav>
     </div>
   </nav>
@@ -74,7 +74,6 @@
 
 <div class="row">
   <div class="col-xs-12 col-md-12">
-
     <div class="section-container-spacer">
         <h1>Florida Panther Poster Series</h1>
         <p><b>Challenge: </b>In my graphic design class, I was tasked to design a series of
@@ -82,50 +81,82 @@
           informational. I focused on raising awareness for the Florida panthers, which are an
           endangered species.</p>
         <p><b>Solution: </b>I utilized neutral, earthy tones to theme my concepts around feelings
-          of “caring for nature”. Gritty textures were emphasized to draw the eye to the panthers. </p>
+          of “caring for nature”. Gritty textures were emphasized to draw the eye to the panthers.</p>
     </div>
 
     <div class="section-container-spacer">
       <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-mockup.jpg"></p>
 
-      <div class="row">
           <div class="col-xs-12 col-md-4">
               <h3>Showcase</h3>
-              <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-poster1.jpg"></p>
+              <a href="./assets/prj_pantherposter/pantherposter-poster1.jpg" data-toggle="lightbox" data-gallery="image-gallery" data-title="Showcase Poster">
+                <img class="img-responsive" src="./assets/prj_pantherposter/pantherposter-poster1.jpg" class="img-fluid">
+              </a>
           </div>
           <div class="col-xs-12 col-md-4">
               <h3>Promotional</h3>
-              <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-poster2.jpg"></p>
+              <a href="./assets/prj_pantherposter/pantherposter-poster2.jpg" data-toggle="lightbox" data-gallery="image-gallery" data-title="Promotional Poster">
+                <img class="img-responsive" src="./assets/prj_pantherposter/pantherposter-poster2.jpg" class="img-fluid">
+              </a>
           </div>
           <div class="col-xs-12 col-md-4">
               <h3>Informational</h3>
-              <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-poster3.jpg"></p>
+              <a href="./assets/prj_pantherposter/pantherposter-poster3.jpg" data-toggle="lightbox" data-gallery="image-gallery" data-title="Informational Poster">
+                <img class="img-responsive" src="./assets/prj_pantherposter/pantherposter-poster3.jpg" class="img-fluid">
+              </a>
           </div>
-      </div>
-
-      <h2>Process Work</h2>
-      <br>
-      <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-map.jpg"></p>
-      <h3>Showcase poster thumbnails</h3>
-      <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-thumb1.jpg"></p>
-      <h3>Promotional poster thumbnails</h3>
-      <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-thumb2.jpg"></p>
-      <h3>Informational poster thumbnails</h3>
-      <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-thumb3.jpg"></p>
-      <h3>Grayscales, color compositions, and final</h3>
-      <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-process.jpg"></p>
-      <h2>Credits</h2>
-      <p>Photos courtesy of:<br>
-        Meg Jerrard from Unsplash<br>
-        Priscilla Du Preez from Pexels<br>
-        Leah Huyghe from Unsplash<br>
-      </p>
-      <p>Film dust textures courtesy of Chris Spooner</p>
-      </div>
     </div>
   </div>
-
 </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-12">
+        <div class="section-container-spacer">
+          <br>
+        <p style="text-align:center;font-size:15px">Click on each image to zoom in.</p>
+        <h2>Process Work</h2>
+        <br>
+        <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-map.jpg"></p>
+        <h3>Showcase poster thumbnails</h3>
+        <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-thumb1.jpg"></p>
+        <h3>Promotional poster thumbnails</h3>
+        <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-thumb2.jpg"></p>
+        <h3>Informational poster thumbnails</h3>
+        <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-thumb3.jpg"></p>
+        <h3>Grayscales, color compositions, and final</h3>
+        <p><img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-process.jpg"></p>
+        <h2>Credits</h2>
+        <p>Photos courtesy of:<br>
+          <ul>
+          <li>Meg Jerrard from Unsplash<br>
+          <li>Priscilla Du Preez from Pexels<br>
+          <li>Leah Huyghe from Unsplash<br>
+          </ul>
+        </p>
+        <p>Film dust textures courtesy of Chris Spooner</p>
+      </div>
+
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
+
+      <script>
+        $(document).ready(function ()
+        {
+          $(document).on('click', '[data-toggle="lightbox"]', function (event)
+          {
+            event.preventDefault();
+            $(this).ekkoLightbox
+            ({
+              alwaysShowClose: true,
+              showArrows: true,
+            });
+          });
+        });
+      </script>
+
+    </div>
+  </div>
 
 
 
