--- a/prj_jimottirebrand.html
+++ b/prj_jimottirebrand.html
@@ -39,16 +39,15 @@
     <div class="navbar-collapse" id="navbar-collapse">
       <div class="site-header hidden-xs">
           <a class="site-brand" href="./index.html" title="">
-            <img class="img-responsive site-logo" alt="" src="./assets/images/profilepic.png">
-            <br>
-            Eri Ishikawa
+            <img class="img-responsive site-logo" alt="" src="./assets/images/profilepic.svg">
           </a>
-        <p>Designer with a focus in graphic and UI/UX design, working to better understand how design influences the actions we take.</p>
+          <br>
+        <p style="font-size:18px">Hi! I'm Eri Ishikawa, a designer with a focus in graphic and UI/UX design, working to better understand how design influences the actions we take.</p>
       </div>
       <ul class="nav">
-        <li><a href="./index.html" title="">HOME</a></li>
-        <li><a href="./about.html" title="">ABOUT</a></li>
-        <li><a href="./contact.html" title="">CONTACT</a></li>
+        <li><a href="./index.html" title=""><b>Home</b></a></li>
+        <li><a href="./about.html" title=""><b>About</b></a></li>
+        <li><a href="./contact.html" title=""><b>Contact</b></a></li>
 
       </ul>
 
@@ -64,7 +63,7 @@
             <i class="fa fa-twitter"></i>
           </a>
         </p> -->
-        <p>© Eri Ishikawa | Website created with <a href="http://www.mashup-template.com/">Mashup Template</a></p>
+        <p style="font-size:15px">© Eri Ishikawa 2021<br>Website created using <br><a href="http://www.mashup-template.com/">Mashup Template</a></p>
       </nav>
     </div>
   </nav>
@@ -80,14 +79,15 @@
         <p><b>Challenge: </b>This was my final project for the year in computer graphic design
           class. We chose a small business to rebrand and design a new website for. I challenged
           myself with Jimotti, a Japanese restaurant in Sanford, FL that specializes in authentic Japanese food.</p>
-        <p><b>Solution: </b>I worked with the client to ensure that this identity supports the
-          ideas of community and creativity. Earth tones are used to invoke an inviting feeling
-          and the prominent swirl resembles a “c” to embody the themes of the cafe, and to also
-          be seen as the swirl that one might see in their cup of latte.</p>
+        <p><b>Solution: </b>My goal in rebranding a Japanese restaurant was to explore the common representations of Japanese-style restaurants in America while keeping the designs authentic to common representations in Japan. Jimotti’s aims to highlight the beauty and wholesomeness of Japanese cuisine in a rustic bar setting, so I kept my colors warm in red and browns. Expressive brushwork make up a big part of the branding to allude to the relaxed, informal “izakaya” bars common in Japan.</p>
+        <p><b>Deliverables: </b>Logo, brand identity, visual system, UI/UX design website (desktop and mobile)</p>
     </div>
 
     <div class="section-container-spacer">
       <p><img class="img-responsive" alt="" src="./assets/prj_jimottirebrand/jimottirebrand-mockup.jpg"></p>
+      <h3>Prototype</h3>
+      <p align="center"><iframe width="375" height="667"src="https://xd.adobe.com/embed/62879c6d-6edb-48c1-ae27-a02ab115c454-37d4/" frameborder="0" allowfullscreen></iframe></p>
+      <br>
       <p><img class="img-responsive" alt="" src="./assets/prj_jimottirebrand/jimottirebrand-brandwords.jpg"></p>
 
       <h3>Logos</h3>
@@ -96,10 +96,6 @@
       <h3>Sample Pages</h3>
       <p><img class="img-responsive" alt="" src="./assets/prj_jimottirebrand/jimottirebrand-samplepage1.jpg"></p>
       <p><img class="img-responsive" alt="" src="./assets/prj_jimottirebrand/jimottirebrand-samplepage2.jpg"></p>
-
-      <h3>Prototype</h3>
-      <p align="center"><iframe width="375" height="667"src="https://xd.adobe.com/embed/62879c6d-6edb-48c1-ae27-a02ab115c454-37d4/" frameborder="0" allowfullscreen></iframe></p>
-      <br>
 
       <h2>Process Work</h2>
       <h3>Moodboard</h3>
