--- a/prj_nomorebook.html
+++ b/prj_nomorebook.html
@@ -39,16 +39,15 @@
     <div class="navbar-collapse" id="navbar-collapse">
       <div class="site-header hidden-xs">
           <a class="site-brand" href="./index.html" title="">
-            <img class="img-responsive site-logo" alt="" src="./assets/images/profilepic.png">
-            <br>
-            Eri Ishikawa
+            <img class="img-responsive site-logo" alt="" src="./assets/images/profilepic.svg">
           </a>
-        <p>Designer with a focus in graphic and UI/UX design, working to better understand how design influences the actions we take.</p>
+          <br>
+        <p style="font-size:18px">Hi! I'm Eri Ishikawa, a designer with a focus in graphic and UI/UX design, working to better understand how design influences the actions we take.</p>
       </div>
       <ul class="nav">
-        <li><a href="./index.html" title="">HOME</a></li>
-        <li><a href="./about.html" title="">ABOUT</a></li>
-        <li><a href="./contact.html" title="">CONTACT</a></li>
+        <li><a href="./index.html" title=""><b>Home</b></a></li>
+        <li><a href="./about.html" title=""><b>About</b></a></li>
+        <li><a href="./contact.html" title=""><b>Contact</b></a></li>
 
       </ul>
 
@@ -64,7 +63,7 @@
             <i class="fa fa-twitter"></i>
           </a>
         </p> -->
-        <p>© Eri Ishikawa | Website created with <a href="http://www.mashup-template.com/">Mashup Template</a></p>
+        <p style="font-size:15px">© Eri Ishikawa 2021<br>Website created using <br><a href="http://www.mashup-template.com/">Mashup Template</a></p>
       </nav>
     </div>
   </nav>
