added meeting project

--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
     </div>
 
     <div class="grid-item">
+      <img class="img-responsive" alt="" src="./assets/prj_lsimeeting/lsimeeting-mockup1.jpg">
+      <a href="./prj_lsimeeting.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>Limbitless Solutions Team Website: Meeting Scheduler</h3>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="grid-item">
       <img class="img-responsive" alt="" src="./assets/prj_jimottirebrand/jimottirebrand-mockup.jpg">
       <a href="./prj_jimottirebrand.html" class="project-description">
         <div class="project-text-holder">
@@ -143,6 +154,14 @@
     </div>
 
     <div class="grid-item">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="grid-item">
       <img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-mockup.jpg">
       <a href="./prj_pantherposter.html" class="project-description">
         <div class="project-text-holder">
@@ -154,6 +173,7 @@
     </div>
   </div>
 </div>
+
 
 
 <script>
