--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
     <div class="grid-sizer"></div>
 
     <div class="grid-item">
+      <img class="img-responsive" alt="" src="./assets/prj_movemore/movemore_thumbnail.jpg">
+      <a href="./prj_movemore.html" class="project-description">
+        <div class="project-text-holder">
+          <div class="project-text-inner">
+            <h3>Move+More!</h3>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="grid-item">
       <img class="img-responsive" alt="" src="./assets/prj_nhfkbook/nhfkbook-mockup1.jpg">
       <a href="./prj_nhfkbook.html" class="project-description">
         <div class="project-text-holder">
@@ -154,14 +165,6 @@
     </div>
 
     <div class="grid-item">
-        <div class="project-text-holder">
-          <div class="project-text-inner">
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="grid-item">
       <img class="img-responsive" alt="" src="./assets/prj_pantherposter/pantherposter-mockup.jpg">
       <a href="./prj_pantherposter.html" class="project-description">
         <div class="project-text-holder">
@@ -192,7 +195,6 @@ document.addEventListener("DOMContentLoaded", function (event) {
 </script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID
-
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -203,7 +205,6 @@ document.addEventListener("DOMContentLoaded", function (event) {
   ga('create', 'UA-XXXXX-X', 'auto');
   ga('send', 'pageview');
 </script>
-
 --><script type="text/javascript" src="./main.85741bff.js"></script></body>
 
 </html>
